--- a/package.json
+++ b/package.json
@@ -11,14 +11,32 @@
   "dependencies": {
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ethers": "^5.6.9",
+    "@usedapp/core": "^1.1.2",
+    "@ethersproject/contracts": "^5.6.2",
+    "@ethersproject/units": "^5.6.1",
+    "@ethersproject/abi": "^5.6.4",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@web3auth/web3auth": "^1.1.0",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "framer-motion": "^6.5.1",
+    "@tailwindcss/typography": "^0.5.4",
+    "styled-components": "^5.3.5",
+    "react-device-detect": "^2.2.2",
+    "react-popper-tooltip": "^4.4.2"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/styled-components": "^5.1.25",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "sass": "^1.52.3",
+    "tailwindcss": "^3.1.3",
     "typescript": "4.7.4"
   }
 }
