--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ethers": "^5.6.9",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@usedapp/core": "^1.1.2",
     "@ethersproject/contracts": "^5.6.2",
     "@ethersproject/units": "^5.6.1",
